[package]
name = "sdl2_particles"
version = "0.1.0"
edition = "2021"
authors = ["Wiktor Janecki <j.wiktor05@interia.pl>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wiktorjanecki/sdl2_particles"
homepage = "https://github.com/wiktorjanecki/sdl2_particles"
description = """
Rust library made for creating particles using sdl2
"""

[dependencies]
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["image"] }
