[package]
name = "sdl2_particles"
version = "0.3.1"
edition = "2021"
authors = ["Wiktor Janecki <j.wiktor05@interia.pl>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/wiktorjanecki/sdl2_particles"
homepage = "https://github.com/wiktorjanecki/sdl2_particles"
description = """
Rust library made for creating particles using sdl2
"""

[dependencies]
sdl2 = { version = "0.37.0", features = ["image"] }

[dev-dependencies]
rand = "0.9.0"

[features]
use-unsafe_textures = ["sdl2/unsafe_textures"]